# cads-mars-server

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG.md  Dockerfile  Makefile  README.md  cads-mars-server.service.example  cads-mars-server.yaml.example  environment.yml  pyproject.toml  setup.cfg  setup.py  test_config.py
.github/workflows/: on-push.yml
cads_mars_server/: __init__.py  __main__.py  _client_file.py  cache.py  cli.py  client.py  client_file.py  client_old.py  client_pipe.py  config.py  log_filter.py  server.py  server_old.py  tools.py  ws_client.py  ws_main.py  ws_server.py
cads_mars_server/tools/: __init__.py
ci/: environment-ci.yml
docs/: CEPHFS_ARCHITECTURE.md  LOG_FILTERING.md  conf.py  index.md
examples/: custom_log_handler.py
scripts/: check_cephfs_health.py
tests/: test_00_version.py  test_10_cli.py  test_10_client.py  test_20_server.py  test_30_cli.py  test_client_file.py
