[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]  # Unpinned to support py3.6

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "click",
  "requests",
  "setproctitle",
  "pymemcache",
  "psutil"
]
description = "A proxy MARS server and client designed for CADS"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-mars-server"
readme = "README.md"

[project.scripts]
cads-mars-server = "cads_mars_server.__main__:mars_cli"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = false

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_mars_server"]

[tool.setuptools_scm]
write_to = "cads_mars_server/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
