[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "click",
  "requests",
  "setproctitle",
  "websockets"
]
description = "A proxy MARS server and client designed for CADS"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-mars-server"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "mypy>=1.0",
  "types-requests",
  "pre-commit",
  "pytest",
  "pytest-cov"
]

[project.scripts]
cads-mars-server = "cads_mars_server.__main__:mars_cli"
check-cephfs-health = "scripts.check_cephfs_health:main"
ws-mars-server = "cads_mars_server.ws_main:main"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = false

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_mars_server"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "cads_mars_server/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
