# Needed for py3.6
[metadata]
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
description = A proxy MARS server and client designed for CADS
license = Apache 2
name = cads-mars-server
readme = file: "README.md"

[options]
install_requires =
    click
    requests
    setproctitle

[options.entry_points]
console_scripts =
    cads-mars-server = cads_mars_server.__main__:mars_cli
